# optimization-crop-allocation

./: .gitignore  CMakeLists.txt  NOTES.md  README.md
data/: A_preds_eu27.csv  A_preds_eu42.csv  B_preds_eu27.csv  B_preds_eu42.csv  maize_pca.m.2.csv  maize_pred_2000_2023_avg.m_s20.csv  pred_2000_2017_avg.m.csv  pred_2000_2017_avg.s.csv  pred_2000_2017_pca.m.2.csv  pred_2000_2017_pca.m.3.csv  soybean_pred_2000_2023_avg.m_s20.csv  soybean_pred_2000_2023_pca.m.2_new_1perc.csv  soybean_pred_2000_2023_pca.m.2_new_1perc_eu27.csv  soybean_pred_2000_2023_pca.m.2_new_5perc.csv
data/hypervolumes-pareto-fronts/: metadata_opti_eu27.xlsx
src/: analyze-front.cpp  extract_candidate_solutions.py  find-dominated.cpp  find-pareto.cpp  greedy_maximization.py  hypervolume_comparison.ipynb  hypervolume_comparison.py  local_utility.py  merge-undominated.cpp  multilp.py  plot_figures.ipynb  plot_pareto_front_as_video.py  plot_pareto_front_over_time.py  soja_decomposition_cmaes.py  soja_moead.py  soja_multi_objective.py  soja_pymoo.py  sol2obj.py
src/.ipynb_checkpoints/: plot_figures-checkpoint.ipynb
src/hv-1.3-src/: hv
